@@ -1,279 +1,397 @@
 package com.framstag.libosmscout.client;
 
 import org.junit.jupiter.api.Test;
+
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
-import static org.junit.jupiter.api.Assertions.*;
+import java.util.Map;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * Unit tests for {@link BasemapManager} directory listing parsing.
+ * Unit tests for {@link BasemapManager}: reading the availability manifest,
+ * choosing the version to offer, reading the metadata of an installed basemap,
+ * and reading the file inventory a download has to follow.
  */
 class BasemapManagerTest {
 
-    private static final String SAMPLE_LISTING =
-        "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\" \"http://www.w3.org/TR/html4/strict.dtd\">\n" +
-        "<html><head><title>Index of /basemap</title></head><body>\n" +
-        "<h1>Index of /basemap</h1>\n" +
-        "<table>\n" +
-        "<tr><th valign=\"top\"><img src=\"/icons/blank.gif\" alt=\"[ICO]\"></th><th><a href=\"?C=N;O=D\">Name</a></th><th><a href=\"?C=M;O=A\">Last modified</a></th><th><a href=\"?C=S;O=A\">Size</a></th><th><a href=\"?C=D;O=A\">Description</a></th></tr>\n" +
-        "<tr><th colspan=\"5\"><hr></th></tr>\n" +
-        "<tr><td valign=\"top\"><img src=\"/icons/back.gif\" alt=\"[PARENTDIR]\"></td><td><a href=\"/\">Parent Directory</a></td><td>&nbsp;</td><td align=\"right\">  - </td><td>&nbsp;</td></tr>\n" +
-        "<tr><td valign=\"top\"><img src=\"/icons/compressed.gif\" alt=\"[   ]\"></td><td><a href=\"BaseMap-2026-02-15.tar.gz\">BaseMap-2026-02-15.tar.gz</a></td><td align=\"right\">2026-02-15 23:24  </td><td align=\"right\">769K</td><td>&nbsp;</td></tr>\n" +
-        "<tr><td valign=\"top\"><img src=\"/icons/compressed.gif\" alt=\"[   ]\"></td><td><a href=\"BaseMap-2026-02-23.tar.gz\">BaseMap-2026-02-23.tar.gz</a></td><td align=\"right\">2026-02-24 00:16  </td><td align=\"right\"> 39M</td><td>&nbsp;</td></tr>\n" +
-        "<tr><td valign=\"top\"><img src=\"/icons/compressed.gif\" alt=\"[   ]\"></td><td><a href=\"BaseMap-minimal-2026-02-23.tar.gz\">BaseMap-minimal-2026-02-23.tar.gz</a></td><td align=\"right\">2026-02-24 00:15  </td><td align=\"right\">2.4M</td><td>&nbsp;</td></tr>\n" +
-        "<tr><td valign=\"top\"><img src=\"/icons/compressed.gif\" alt=\"[   ]\"></td><td><a href=\"basemap.tar.gz\">basemap.tar.gz</a></td><td align=\"right\">2026-01-29 12:41  </td><td align=\"right\"> 28M</td><td>&nbsp;</td></tr>\n" +
-        "<tr><td valign=\"top\"><img src=\"/icons/unknown.gif\" alt=\"[   ]\"></td><td><a href=\"planet_extract.osm.pbf\">planet_extract.osm.pbf</a></td><td align=\"right\">2026-01-29 11:12  </td><td align=\"right\">1.1G</td><td>&nbsp;</td></tr>\n" +
-        "</table>\n" +
-        "</body></html>";
+    /** A manifest as the regeneration pass writes it. */
+    private static final String SAMPLE_MANIFEST = """
+        {
+          "schema": 1,
+          "versions": [
+            {
+              "typeConfigVersion": 27,
+              "changedAt": "2026-09-07T10:00:00Z"
+            },
+            {
+              "typeConfigVersion": 26,
+              "changedAt": "2026-06-01T08:30:00Z"
+            }
+          ]
+        }
+        """;
+
+    /** A metadata file as the import tool writes it. */
+    private static final String SAMPLE_METADATA = """
+        {
+          "schema": 1,
+          "typeConfigVersion": 27,
+          "generatedAt": "2026-09-07T10:00:00Z",
+          "source": {
+            "url": "file:///config/planet_extract.osm.pbf",
+            "md5": "146f59bf3b42630f89572160de6260bb"
+          },
+          "import": {
+            "tool": "Import",
+            "version": "1.1.1",
+            "startStep": 0,
+            "endStep": 40,
+            "durationSeconds": 123.4
+          },
+          "output": {
+            "boundingBox": {
+              "minLon": -180.0,
+              "minLat": -90.0,
+              "maxLon": 180.0,
+              "maxLat": 90.0
+            },
+            "files": {
+              "types.dat": {
+                "size": 12345678,
+                "crc32": 2712847316
+              },
+              "water.idx": {
+                "size": 4096,
+                "crc32": 3735928559
+              }
+            }
+          },
+          "stats": {
+            "types": 3
+          }
+        }
+        """;
+
+    private static BasemapManager manager() {
+        return new BasemapManager(new MapProvider("test", "https://example.com", ""),
+                                  Path.of("/nonexistent/path"));
+    }
+
+    // ---- the availability manifest -----------------------------------------
 
     @Test
-    void testParseDirectoryListingReturnsTarGzOnly() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        // Should only include .tar.gz files, not .osm.pbf
-        assertEquals(4, archives.size());
+    void testParseManifestReadsVersions() {
+        List<BasemapManager.BasemapVersion> versions = BasemapManager.parseManifest(SAMPLE_MANIFEST);
+
+        assertEquals(2, versions.size());
+        assertEquals(27, versions.get(0).getTypeConfigVersion());
+        assertEquals("2026-09-07T10:00:00Z", versions.get(0).getChangedAt());
+        assertEquals(26, versions.get(1).getTypeConfigVersion());
     }
 
     @Test
-    void testParseDirectoryListingNames() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        // Sorted by date desc: BaseMap-2026-02-23 (2026-02-24), BaseMap-minimal-2026-02-23 (2026-02-24), BaseMap-2026-02-15 (2026-02-15), basemap.tar.gz (2026-01-29)
-        assertEquals("BaseMap-2026-02-23.tar.gz", archives.get(0).getFileName());
-        assertEquals("BaseMap-minimal-2026-02-23.tar.gz", archives.get(1).getFileName());
-        assertEquals("BaseMap-2026-02-15.tar.gz", archives.get(2).getFileName());
-        assertEquals("basemap.tar.gz", archives.get(3).getFileName());
+    void testParseManifestRejectsOtherSchema() {
+        assertTrue(BasemapManager.parseManifest("{\"schema\": 2, \"versions\": []}").isEmpty());
     }
 
     @Test
-    void testParseDirectoryListingSizes() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        // Sorted by date desc: 39M, 2.4M, 769K, 28M
-        assertEquals(39L * 1024 * 1024, archives.get(0).getSizeBytes());
-        assertEquals(2_516_582L, archives.get(1).getSizeBytes(), 1024); // 2.4M ≈ 2,516,582
-        assertEquals(769L * 1024, archives.get(2).getSizeBytes());
-        assertEquals(28L * 1024 * 1024, archives.get(3).getSizeBytes());
+    void testParseManifestRejectsContentThatIsNotJSON() {
+        assertTrue(BasemapManager.parseManifest("{ this is not json").isEmpty());
     }
 
     @Test
-    void testParseDirectoryListingDates() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        assertNotNull(archives.get(0).getLastModified());
-        assertEquals(2026, archives.get(0).getLastModified().getYear());
-        assertEquals(2, archives.get(0).getLastModified().getMonthValue());
-        assertEquals(24, archives.get(0).getLastModified().getDayOfMonth());
+    void testParseManifestHandlesMissingContent() {
+        assertTrue(BasemapManager.parseManifest(null).isEmpty());
     }
 
     @Test
-    void testParseEmptyListing() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing("<html></html>");
-        assertTrue(archives.isEmpty());
+    void testParseManifestSkipsEntriesWithoutAVersion() {
+        String manifest = "{\"schema\": 1, \"versions\": [{\"changedAt\": \"2026-09-07T10:00:00Z\"}]}";
+
+        assertTrue(BasemapManager.parseManifest(manifest).isEmpty());
     }
 
     @Test
-    void testParseListingWithNoTarGz() {
-        String listing = "<a href=\"readme.txt\">readme.txt</a> 2026-01-01 12:00 1K";
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(listing);
-        assertTrue(archives.isEmpty());
+    void testParseManifestWithoutVersions() {
+        assertTrue(BasemapManager.parseManifest("{\"schema\": 1}").isEmpty());
     }
 
     @Test
-    void testArchiveIsMinimal() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        assertFalse(archives.get(0).isMinimal()); // BaseMap-2026-02-23
-        assertTrue(archives.get(1).isMinimal());  // BaseMap-minimal-2026-02-23
-        assertFalse(archives.get(2).isMinimal()); // BaseMap-2026-02-15
-        assertFalse(archives.get(3).isMinimal()); // basemap.tar.gz
+    void testParseManifestIgnoresKeysInsideStrings() {
+        String manifest = """
+            {
+              "schema": 1,
+              "note": "a version entry looks like {\\"typeConfigVersion\\": 5}",
+              "versions": [
+                {"typeConfigVersion": 27, "changedAt": "2026-09-07T10:00:00Z"}
+              ]
+            }
+            """;
+
+        List<BasemapManager.BasemapVersion> versions = BasemapManager.parseManifest(manifest);
+
+        assertEquals(1, versions.size());
+        assertEquals(27, versions.get(0).getTypeConfigVersion());
+    }
+
+    // ---- version selection -------------------------------------------------
+
+    @Test
+    void testSupportedVersionIsTheOneTheListingUses() {
+        assertEquals(MapDownloadManager.DATABASE_FORMAT_VERSION,
+                     BasemapManager.getSupportedDatabaseFormatVersion());
     }
 
     @Test
-    void testArchiveLabel() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        assertTrue(archives.get(0).getLabel().startsWith("Full"));
-        assertTrue(archives.get(1).getLabel().startsWith("Minimal"));
+    void testSelectReadableVersionsDropsNewerOnes() {
+        int supported = BasemapManager.getSupportedDatabaseFormatVersion();
+        List<BasemapManager.BasemapVersion> versions = List.of(
+            new BasemapManager.BasemapVersion(supported + 1, "2027-01-01T00:00:00Z"),
+            new BasemapManager.BasemapVersion(supported, "2026-09-07T10:00:00Z"),
+            new BasemapManager.BasemapVersion(10, "2026-01-01T00:00:00Z"));
+
+        List<BasemapManager.BasemapVersion> readable = BasemapManager.selectReadableVersions(versions);
+
+        assertEquals(2, readable.size());
+        assertEquals(supported, readable.get(0).getTypeConfigVersion());
+        assertEquals(10, readable.get(1).getTypeConfigVersion());
     }
 
     @Test
-    void testArchiveSizeHuman() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        assertEquals("39.0 MB", archives.get(0).getSizeHuman());
+    void testSelectReadableVersionsIsEmptyWhenNothingIsReadable() {
+        int supported = BasemapManager.getSupportedDatabaseFormatVersion();
+        List<BasemapManager.BasemapVersion> versions = List.of(
+            new BasemapManager.BasemapVersion(supported + 1, "2027-01-01T00:00:00Z"));
+
+        assertTrue(BasemapManager.selectReadableVersions(versions).isEmpty());
     }
 
     @Test
-    void testSortOrderNewestFirst() {
-        List<BasemapManager.BasemapArchive> archives = BasemapManager.parseDirectoryListing(SAMPLE_LISTING);
-        // Newest first: 2026-02-24, 2026-02-15, 2026-02-24 (minimal), 2026-01-29
-        assertTrue(archives.get(0).getLastModified().isAfter(archives.get(1).getLastModified()) ||
-                   archives.get(0).getLastModified().isEqual(archives.get(1).getLastModified()));
+    void testSelectReadableVersionsSortsNewestFirst() {
+        List<BasemapManager.BasemapVersion> versions = List.of(
+            new BasemapManager.BasemapVersion(11, "2026-01-01T00:00:00Z"),
+            new BasemapManager.BasemapVersion(13, "2026-03-01T00:00:00Z"),
+            new BasemapManager.BasemapVersion(12, "2026-02-01T00:00:00Z"));
+
+        List<BasemapManager.BasemapVersion> readable = BasemapManager.selectReadableVersions(versions);
+
+        assertEquals(13, readable.get(0).getTypeConfigVersion());
+        assertEquals(12, readable.get(1).getTypeConfigVersion());
+        assertEquals(11, readable.get(2).getTypeConfigVersion());
     }
+
+    @Test
+    void testVersionLabel() {
+        assertEquals("Version 27", new BasemapManager.BasemapVersion(27, null).getLabel());
+    }
+
+    // ---- URLs and directories ----------------------------------------------
 
     @Test
     void testGetBasemapDirectory() {
-        BasemapManager mgr = new BasemapManager(
-            new MapProvider("test", "https://example.com", ""),
-            java.nio.file.Paths.get("/tmp/maps"));
-        assertEquals(java.nio.file.Paths.get("/tmp/maps/basemap"), mgr.getBasemapDirectory());
-    }
+        BasemapManager mgr = new BasemapManager(new MapProvider("test", "https://example.com", ""),
+                                                Path.of("/maps"));
 
-    @Test
-    void testGetBasemapBaseUrl() {
-        BasemapManager mgr = new BasemapManager(
-            new MapProvider("test", "https://example.com", ""),
-            java.nio.file.Paths.get("/tmp/maps"));
+        assertEquals("/maps/basemap", mgr.getBasemapDirectory().toString());
         assertEquals("https://example.com/basemap/", mgr.getBasemapBaseUrl());
+        assertEquals("https://example.com/basemap/index.json", mgr.getBasemapManifestUrl());
+    }
+
+    // ---- the file inventory of a download ----------------------------------
+
+    @Test
+    void testParseFileInventory() {
+        Map<String, long[]> files = BasemapManager.parseFileInventory(SAMPLE_METADATA);
+
+        assertEquals(2, files.size());
+        assertNotNull(files.get("types.dat"));
+        assertEquals(12345678L, files.get("types.dat")[0]);
+        assertEquals(2712847316L, files.get("types.dat")[1]);
+        assertEquals(4096L, files.get("water.idx")[0]);
+        assertEquals(3735928559L, files.get("water.idx")[1]);
     }
 
     @Test
-    void testExtractTarGz() throws Exception {
-        // Create a small tar.gz with one file
-        java.nio.file.Path tempTar = java.nio.file.Files.createTempFile("test", ".tar.gz");
-        java.nio.file.Path tempDir = java.nio.file.Files.createTempDirectory("extract-test");
-        try {
-            // Create a tar file in memory: one file "hello.txt" with content "Hello World"
-            byte[] tarData = createSimpleTar("hello.txt", "Hello World!".getBytes());
-            // GZip it
-            java.io.ByteArrayOutputStream gzOut = new java.io.ByteArrayOutputStream();
-            try (java.util.zip.GZIPOutputStream gz = new java.util.zip.GZIPOutputStream(gzOut)) {
-                gz.write(tarData);
+    void testParseFileInventoryWithoutOutput() {
+        assertTrue(BasemapManager.parseFileInventory("{\"schema\": 1}").isEmpty());
+    }
+
+    @Test
+    void testParseFileInventoryWithoutFiles() {
+        assertTrue(BasemapManager.parseFileInventory(
+            "{\"schema\": 1, \"output\": {\"boundingBox\": {}}}").isEmpty());
+    }
+
+    @Test
+    void testParseFileInventorySkipsEntriesWithoutChecksum() {
+        String metadata = """
+            {
+              "schema": 1,
+              "output": {
+                "files": {
+                  "types.dat": {"size": 10},
+                  "water.idx": {"size": 20, "crc32": 30}
+                }
+              }
             }
-            java.nio.file.Files.write(tempTar, gzOut.toByteArray());
+            """;
 
-            // Extract
-            BasemapManager.extractTarGz(tempTar, tempDir);
+        Map<String, long[]> files = BasemapManager.parseFileInventory(metadata);
 
-            // Verify
-            java.nio.file.Path extracted = tempDir.resolve("hello.txt");
-            assertTrue(java.nio.file.Files.exists(extracted));
-            String content = new String(java.nio.file.Files.readAllBytes(extracted));
-            assertEquals("Hello World!", content);
+        assertEquals(1, files.size());
+        assertNotNull(files.get("water.idx"));
+        assertNull(files.get("types.dat"));
+    }
+
+    // ---- small JSON readers -------------------------------------------------
+
+    @Test
+    void testJsonIntAndString() {
+        assertEquals(27, BasemapManager.jsonInt(SAMPLE_METADATA, "typeConfigVersion"));
+        assertEquals("2026-09-07T10:00:00Z", BasemapManager.jsonString(SAMPLE_METADATA, "generatedAt"));
+        assertNull(BasemapManager.jsonInt(SAMPLE_METADATA, "nothingLikeThis"));
+        assertNull(BasemapManager.jsonString(SAMPLE_METADATA, "typeConfigVersion"));
+    }
+
+    @Test
+    void testJsonLongReadsUnsignedChecksums() {
+        // CRC-32 values are unsigned 32 bit and do not fit into an int.
+        Map<String, long[]> files = BasemapManager.parseFileInventory(SAMPLE_METADATA);
+
+        assertEquals(3735928559L, files.get("water.idx")[1]);
+        assertNull(BasemapManager.jsonLong(SAMPLE_METADATA, "nothingLikeThis"));
+    }
+
+    @Test
+    void testJsonObjectIsScopedToTheNamedObject() {
+        // "version" exists both inside the import block and (as part of a string)
+        // elsewhere; the reader has to return the value of the named field only.
+        assertEquals("1.1.1", BasemapManager.jsonString(
+            BasemapManager.jsonObject(SAMPLE_METADATA, "import"), "version"));
+        assertNull(BasemapManager.jsonObject(SAMPLE_METADATA, "nothingLikeThis"));
+    }
+
+    @Test
+    void testJsonArrayOfObjects() {
+        List<String> objects = BasemapManager.jsonObjects(
+            BasemapManager.jsonArray(SAMPLE_MANIFEST, "versions"));
+
+        assertEquals(2, objects.size());
+        assertEquals(27, BasemapManager.jsonInt(objects.get(0), "typeConfigVersion"));
+    }
+
+    // ---- installed basemap -------------------------------------------------
+
+    @Test
+    void testIsBasemapInstalledWithoutDirectory() {
+        assertFalse(manager().isBasemapInstalled());
+    }
+
+    @Test
+    void testIsUpdateAvailableWithoutInstalledBasemap() {
+        assertFalse(manager().isUpdateAvailable());
+    }
+
+    @Test
+    void testDeleteBasemapWithoutInstallation() {
+        assertFalse(manager().deleteBasemap());
+    }
+
+    @Test
+    void testInstalledMetadataDrivesTheInstalledInfo() throws Exception {
+        Path maps = Files.createTempDirectory("basemap-test");
+
+        try {
+            Path basemapDir = maps.resolve("basemap");
+            Files.createDirectories(basemapDir);
+            Files.writeString(basemapDir.resolve("types.dat"), "types");
+            Files.writeString(basemapDir.resolve("db.json"), SAMPLE_METADATA);
+
+            BasemapManager mgr = new BasemapManager(
+                new MapProvider("test", "https://example.com", ""), maps);
+
+            assertTrue(mgr.isBasemapInstalled());
+
+            BasemapManager.BasemapInfo info = mgr.getInstalledBasemapInfo();
+
+            assertNotNull(info);
+            assertEquals(27, info.getTypeConfigVersion());
+            assertEquals("2026-09-07T10:00:00Z", info.getChangedAt());
+            assertEquals(2, info.getFileCount());
         } finally {
-            deleteDirectory(tempTar);
-            deleteDirectory(tempDir);
+            deleteDirectory(maps);
         }
     }
 
     @Test
-    void testExtractTarGzWithDirectory() throws Exception {
-        java.nio.file.Path tempTar = java.nio.file.Files.createTempFile("test", ".tar.gz");
-        java.nio.file.Path tempDir = java.nio.file.Files.createTempDirectory("extract-test");
+    void testGetInstalledBasemapInfoWithoutMetadata() throws Exception {
+        Path maps = Files.createTempDirectory("basemap-test");
+
         try {
-            // Create tar with a directory entry and a file inside
-            byte[] tarData = createSimpleTarWithDir("subdir/", "subdir/file.txt", "Nested content".getBytes());
-            java.io.ByteArrayOutputStream gzOut = new java.io.ByteArrayOutputStream();
-            try (java.util.zip.GZIPOutputStream gz = new java.util.zip.GZIPOutputStream(gzOut)) {
-                gz.write(tarData);
-            }
-            java.nio.file.Files.write(tempTar, gzOut.toByteArray());
+            Path basemapDir = maps.resolve("basemap");
+            Files.createDirectories(basemapDir);
+            Files.writeString(basemapDir.resolve("types.dat"), "types");
 
-            BasemapManager.extractTarGz(tempTar, tempDir);
+            BasemapManager mgr = new BasemapManager(
+                new MapProvider("test", "https://example.com", ""), maps);
 
-            assertTrue(java.nio.file.Files.isDirectory(tempDir.resolve("subdir")));
-            assertTrue(java.nio.file.Files.exists(tempDir.resolve("subdir/file.txt")));
-            String content = new String(java.nio.file.Files.readAllBytes(tempDir.resolve("subdir/file.txt")));
-            assertEquals("Nested content", content);
+            // Without downloaded metadata there is no version to compare, so the
+            // installation is not usable for an update check either.
+            assertNull(mgr.getInstalledBasemapInfo());
+            assertFalse(mgr.isUpdateAvailable());
         } finally {
-            deleteDirectory(tempTar);
-            deleteDirectory(tempDir);
+            deleteDirectory(maps);
         }
     }
 
+    // ---- update comparison --------------------------------------------------
+
     @Test
-    void testDeleteBasemap() throws Exception {
-        java.nio.file.Path tempDir = java.nio.file.Files.createTempDirectory("basemap-test");
-        java.nio.file.Path subFile = tempDir.resolve("test.txt");
-        java.nio.file.Files.write(subFile, "data".getBytes());
-
-        BasemapManager mgr = new BasemapManager(
-            new MapProvider("test", "https://example.com", ""),
-            tempDir.getParent());
-
-        // The basemap dir is tempDir.getParent()/basemap, not tempDir itself
-        // So let's test deleteDirectory via the extract cleanup path
-        assertTrue(java.nio.file.Files.exists(tempDir));
-        // Use reflection to test the private method... or just test via the public API
-        // Actually let's just test that deleteBasemap returns false when no basemap
-        assertFalse(mgr.deleteBasemap());
+    void testIsNewerForANewerVersion() {
+        assertTrue(BasemapManager.isNewer(27, "2026-09-07T10:00:00Z", 26, "2026-09-07T10:00:00Z"));
     }
 
     @Test
-    void testIsBasemapInstalledNoDir() {
-        BasemapManager mgr = new BasemapManager(
-            new MapProvider("test", "https://example.com", ""),
-            java.nio.file.Paths.get("/nonexistent/path"));
-        assertFalse(mgr.isBasemapInstalled());
+    void testIsNewerForAnOlderVersion() {
+        assertFalse(BasemapManager.isNewer(26, "2026-09-07T10:00:00Z", 27, "2026-09-07T10:00:00Z"));
     }
 
     @Test
-    void testIsUpdateAvailableNoBasemap() {
-        BasemapManager mgr = new BasemapManager(
-            new MapProvider("test", "https://example.com", ""),
-            java.nio.file.Paths.get("/nonexistent/path"));
-        assertFalse(mgr.isUpdateAvailable());
+    void testIsNewerForANewerChangeTime() {
+        assertTrue(BasemapManager.isNewer(27, "2026-09-08T10:00:00Z", 27, "2026-09-07T10:00:00Z"));
     }
 
-    // ---- Helpers ----
+    @Test
+    void testIsNewerForTheSameChangeTime() {
+        assertFalse(BasemapManager.isNewer(27, "2026-09-07T10:00:00Z", 27, "2026-09-07T10:00:00Z"));
+    }
 
-    private static void deleteDirectory(java.nio.file.Path dir) {
+    @Test
+    void testIsNewerWithoutAServerChangeTime() {
+        assertFalse(BasemapManager.isNewer(27, null, 27, "2026-09-07T10:00:00Z"));
+    }
+
+    @Test
+    void testIsNewerWithoutAnInstalledChangeTime() {
+        assertTrue(BasemapManager.isNewer(27, "2026-09-07T10:00:00Z", 27, null));
+    }
+
+    // ---- helpers ------------------------------------------------------------
+
+    private static void deleteDirectory(Path dir) {
         try {
-            java.nio.file.Files.walk(dir)
+            Files.walk(dir)
                 .sorted(java.util.Comparator.reverseOrder())
                 .forEach(p -> {
-                    try { java.nio.file.Files.deleteIfExists(p); }
+                    try { Files.deleteIfExists(p); }
                     catch (Exception ignored) {}
                 });
         } catch (Exception ignored) {}
-    }
-
-    /** Create a simple tar archive with one file. */
-    private static byte[] createSimpleTar(String fileName, byte[] content) throws Exception {
-        java.io.ByteArrayOutputStream out = new java.io.ByteArrayOutputStream();
-        writeTarHeader(out, fileName, content.length, '0');
-        out.write(content);
-        padTo512(out, content.length);
-        // Two zero blocks for end-of-archive
-        out.write(new byte[1024]);
-        return out.toByteArray();
-    }
-
-    /** Create a tar with a directory entry and a file inside. */
-    private static byte[] createSimpleTarWithDir(String dirName, String fileName, byte[] content) throws Exception {
-        java.io.ByteArrayOutputStream out = new java.io.ByteArrayOutputStream();
-        // Directory entry
-        writeTarHeader(out, dirName, 0, '5');
-        padTo512(out, 0);
-        // File entry
-        writeTarHeader(out, fileName, content.length, '0');
-        out.write(content);
-        padTo512(out, content.length);
-        // End-of-archive
-        out.write(new byte[1024]);
-        return out.toByteArray();
-    }
-
-    private static void writeTarHeader(java.io.OutputStream out, String name, long size, char typeFlag) throws Exception {
-        byte[] header = new byte[512];
-        // Name (bytes 0-99)
-        byte[] nameBytes = name.getBytes("ASCII");
-        System.arraycopy(nameBytes, 0, header, 0, Math.min(nameBytes.length, 100));
-        // Size (bytes 124-135, octal)
-        String sizeStr = Long.toOctalString(size);
-        byte[] sizeBytes = sizeStr.getBytes("ASCII");
-        System.arraycopy(sizeBytes, 0, header, 124, sizeBytes.length);
-        // Type flag (byte 156)
-        header[156] = (byte) typeFlag;
-        // Checksum placeholder (bytes 148-155, spaces)
-        for (int i = 148; i < 156; i++) header[i] = (byte) ' ';
-        // Calculate checksum (bytes 0-511)
-        int checksum = 0;
-        for (int i = 0; i < 512; i++) checksum += (header[i] & 0xFF);
-        String chkStr = String.format("%06o", checksum);
-        byte[] chkBytes = chkStr.getBytes("ASCII");
-        System.arraycopy(chkBytes, 0, header, 148, chkBytes.length);
-        header[155] = 0;
-        out.write(header);
-    }
-
-    private static void padTo512(java.io.OutputStream out, long dataSize) throws Exception {
-        long padding = (512 - (dataSize % 512)) % 512;
-        if (padding > 0) {
-            out.write(new byte[(int) padding]);
-        }
     }
 }
